--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -10,7 +10,7 @@ body {
   
 }
 
-.about {
+/* .about {
     background: #401F71;
     color: #fff;
     padding: 150px 0 var(---setion-padding);
@@ -43,5 +43,25 @@ body {
   .about-title { margin-bottom: 5px; }
   .about .section-text {
     margin-bottom: 5px;
+  } */
+
+
+  .banner-parent {
+    background: #401F71;
+    color: #fff;
+    /* padding: 150px 0 var(---setion-padding); */
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 25px;
+    margin-top: 5rem;
+    margin-left: 10rem;
+    margin-right: 10rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .banner-title > h2{
+    margin-bottom: 1rem;
   }
   
