--- a/src/components/blog/blog.css
+++ b/src/components/blog/blog.css
@@ -1,31 +1,50 @@
-.loan {
+*, *::before, *::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  height: 100vh;
+  font-family: "Roboto", sans-serif;
+  
+}
+
+
+  .blog-parent {
     display: flex;
-    background: #fff;
-    justify-content:space-around;
+    padding-top: 5rem;
+    justify-content: space-evenly;
     align-items: center;
   }
-  
-  .loan .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    gap: 50px;
+
+  .blog-title > h2 {
+    margin-bottom: 0.5rem;
+
   }
-  
-  .loan-banner {
-   position: relative;
-   margin-bottom: 40px;
+
+  .blog-title > p {
+    margin-bottom: 2rem;
   }
-  
-  .loan-img {
-    width: 100%;
+
+  .blog-container > ol > li > h5 {
+    margin-bottom: 0.5rem;
+    font-size: small;
+    
   }
-  
-  
-  .loan-title {
-   margin-top: 5px;
+
+  .blog-container > ol > li > p {
+    margin-bottom: 1.5rem;
+    font-size: small;
+    
   }
-  
-  .loan .section-text {
-    margin-bottom: 5px;
+
+  .blog-container > ol {
+    margin-left: 1rem;
+  }
+
+  .blog-pic > img {
+ padding-top: 5rem;
+ margin-right: 8rem;
+
   }
