--- a/src/components/calltoaction/action.css
+++ b/src/components/calltoaction/action.css
@@ -10,49 +10,59 @@ body {
   
 }
 
-.easy-card {
-    background: var(--white);
-    box-shadow: 5px 30px 50px hsla(0, 1%, 15%, 0.05);
-    padding: 20px;
-    border-radius: 25px;
-    max-width: 400px;
-    margin-inline: auto;
-    padding: 20px;
-    border-radius: 25px;
-  }
-  
-  
-  .easy-card .card-banner {
-    margin-bottom: 20px;
-    border-radius: 12px 12px 0 0;
-    overflow: hidden;
-  }
-  
-  .easy-card:hover img {transform: scale(1.05);}
-  
-  .easy-card .card-title { margin-bottom: 15px; }
-  
-  .easy-card .card-text {
-    line-height: 1.5;
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  
-  .easy-card .card-link {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 10px;
-    transition: var(--transition);
-  }
+.action-title {
+  padding-top: 5rem;
+  margin-bottom: 3rem;
+  text-align: center;
+}
 
-  .departments-title {
-    text-align: center;
-    margin-bottom: 80px;
-  }
+.action-list > ul {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 2rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
 
-  .departments-list {
-    display: flex;
-    gap: 30px;
-    margin-bottom: 50px;
-  }
+
+
+
+.action-container {
+  background: whitesmoke;
+  box-shadow: 5px 30px 50px hsla(0, 4%, 5%, 0.05);
+  border-radius: 10px;
+  width: 270px;
+  margin-inline: auto;
+  padding: 20px;
+ 
+}
+
+.action-pic {
+  margin-top: 6rem;
+}
+
+.action-container > p {
+  justify-content: center;
+  align-items: start;
+  text-align: start;
+  margin-right: 1rem;
+}
+
+
+
+.action-container > h3 {
+  justify-content: flex-start;
+  align-items: start;
+  text-align: start;
+  width: 100%;
+  margin-right: 1rem;
+}
+
+.action {
+  justify-content: flex-start;
+  align-items: start;
+  text-align: start;
+  margin-bottom: -1rem;
+  margin-left: 1rem;
+}
+
