--- a/src/components/details/details.css
+++ b/src/components/details/details.css
@@ -22,72 +22,106 @@ body {
   to bottom, transparent, #fff ), url(../../images/image2.jpg);
 background-size: cover;
 background-repeat: no-repeat;
-border: 1px solid red;
+}
+
+
+.department-title > h2 {
+  padding-top: 5rem;
+  margin-bottom: 3rem;
+  text-align: center;
+}
+
+
+.department-list > ul {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 2rem;
+  margin-left: 2rem;
+
+}
+
+
+.department-list > ul > div > h3 {
+  margin-top: 1rem;
+  align-items: center;
+  padding-left: 2rem;
+}
+
+.department-list > ul > div > p {
+  justify-content: center;
+  text-align: center;
+  margin-top: 0.5rem;
+  margin-bottom: 50px;
+  margin-left: auto;
+  align-items: center;
+  width: auto;
+  font-size: small;
+
 }
 
 
 
 
-.departments-title {
+/* .departments-title {
   text-align: center;
   margin-top: 5rem;
   margin-bottom: 1rem;
-}
+} */
 /* 
 .departments-title > h2 {
   margin-top: 5px;
 } */
 
-.departments-list {
+/* .departments-list {
   display: flex;
   gap: 30px;
   margin-bottom: 50px;
   justify-content: center;
   border: 1px solid red;
-}
+} */
 
-.departments-card {
+/* .departments-card {
   max-width: 400px;
   margin-inline: auto;
   padding: 20px;
   border-radius: 25px;
-}
+} */
 
-.departments-card .card-banner {
+/* .departments-card .card-banner {
   margin-bottom: 20px;
   border-radius: 12px 12px 0 0;
   overflow: hidden;
-}
+} */
 
-.departments-card img {
+/* .departments-card img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   transition: var(--transition);
-}
+} */
 
-.departments-card:hover img {transform: scale(1.05);}
+/* .departments-card:hover img {transform: scale(1.05);} */
 
-.departments-card .card-title { margin-bottom: 15px; }
-
+/* .departments-card .card-title { margin-top: 1rem; } */
+/* 
 .departments-card .card-text {
-  line-height: 1.5;
-  margin-bottom: 20px;
-  text-align: center;
-}
-
+  /* line-height: 1.5; */
+  /* margin-top: 1rem;
+  justify-content: center;
+} */
+/* 
 h3 {
   text-align: center;
-}
-
+} */
+/* 
 .departments-card .card-link {
   display: flex;
   justify-content: space-around;
   align-items: center;
   gap: 10px;
   transition: var(--transition);
-}
-
+} */
+/* 
 .departments-card ,.card-link:is(:hover, :focus) { gap: 15px; }
 
-.departments .btn-primary { margin-inline: auto; }
+.departments .btn-primary { margin-inline: auto; } */
