--- a/src/components/faq/faq.css
+++ b/src/components/faq/faq.css
@@ -1,4 +1,4 @@
-.what {
+/* .what {
     padding: 150px 0 var(---setion-padding);
     justify-content: space-around;
     align-items: center;
@@ -16,4 +16,41 @@
   .what-container > h5 {
       text-decoration: underline;
      text-decoration-color: #c3c4bf;
+  } */
+
+  .faq-parent {
+    margin-top: 5rem;
+    
+    align-items: center;
+  
+  }
+
+  .faq-title > h3 {
+    margin-bottom: 1rem;
+    justify-content: center;
+    margin-left: 30rem;
+    align-items: center;
+  }
+
+  .faq-title > h4 {
+    margin-left: 20rem;
+    margin-bottom: 2rem;
+  }
+
+  .faq-title > p {
+    margin-left: 20rem;
+    margin-bottom: 2rem;
+  }
+
+  .faq-title > h5 {
+    justify-content: center;
+    align-items: center;
+    margin-left: 30rem;
+    margin-bottom: 1rem;
+
+  }
+
+
+  .faq-title > h6 {
+    margin-left: 30rem;
   }
