--- a/src/components/getstarted/start.css
+++ b/src/components/getstarted/start.css
@@ -1,4 +1,4 @@
-.blog {
+/* .blog {
     background: #E1F7F5;
     padding: 150px 0 var(---setion-padding);
     justify-content: space-around;
@@ -19,4 +19,36 @@
     margin-bottom: 50px;
     justify-content: center;
     align-content: center;
+  } */
+
+
+  .start-parent {
+    background: #E1F7F5;
+    margin-top: 5rem;
+  }
+
+  .start-title > h2 {
+    justify-content: center;
+    padding-top: 5rem;
+    align-items: center;
+    margin-left: 35rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .start-title > p {
+    margin-left: 30rem;
+    margin-bottom: 1.5rem;
+    font-size: small;
+  }
+
+  .start-list > ul {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: -50px;
+  } 
+
+  .start-list > ul > div > h6 {
+    margin-top: 0.5rem;
+    margin-bottom: 5rem;
   }
